Actually fixed buttons on mobile

--- a/static/css/homeStyle.css
+++ b/static/css/homeStyle.css
@@ -52,11 +52,10 @@ h1{
 header {
     background-color: #222;
     color: white;
-    padding: 0.625rem;
+    padding: 1rem;
 }
 
 nav a {
-    display: inline-block;
     color: white;
     text-decoration: none;
     background-color: #444;
@@ -67,7 +66,12 @@ nav a {
 }
 
 @media screen and (max-width: 768px) {
+    header {
+        padding: 0.625rem;
+    }
+
     nav a {
+        display: inline-block;
         overflow: hidden;
         padding: 6px 12px;
         font-size: 14px;
